# airspeed

./: .gitignore  CONTEXT.md  README.md
docs/: camera-image-compression-investigation.md  device-onboarding-schema-guide.md  git-bundle-sync-to-226.md  gripper-unit-alignment-20260723.md  motor-register-audit-joint6-lag-20260723.md  pipeline-mapping-data-collection-to-lerobot.md
docs/adr/: 0001-pose-stream-layout.md  0002-episode-outcome-model.md  0003-delete-threaded-writer-twin.md
src/data_collection_service/: README.md  pyproject.toml
src/data_collection_service/config/: session_vr_ik_robot_button_control.yaml
src/data_collection_service/core/adapters/: common.py  registry.py
src/data_collection_service/core/config/: session_config.py
src/data_collection_service/docs/: recording-control-fixes.md  vr-ik-auto-repin.md
src/data_collection_service/tests/: test_adapter_registry.py  test_converter.py  test_image_preview.py  test_recording_control.py  test_session_config.py  test_writer.py  test_zenoh_side_channel.py
src/data_collection_service/tools/: README.md  benchmark_writer_latency.py  convert_h5_to_lerobot.py  dev_mock_messages.py  dev_mock_ros2_publishers.py  dev_mock_session.py  validate_h5_metadata_pipeline.py
src/robot_interface/: README.md
src/sensor_interface/: README.md
src/sensor_interface/camera-stream-adaptor/: README.md  camera_publisher.py  pyproject.toml
src/teleoperation_interface/: README.md
src/teleoperation_interface/vr-standard-ros2-bridge-adaptor/: README.md  pyproject.toml  vr_bridge_server.py
(+27 files in other folders)
